base/monitoring/kube-prometheus-stack/networkpolicies/alertmanager-egress-heartbeats.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager-egress-heartbeats
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
      app.kubernetes.io/instance: kube-prometheus-stack-alertmanager
  egress:
    - toFQDNs:
        - matchName: heartbeats.tools.${BASE_DOMAIN}
      toPorts:
        - ports:
            - port: "443"
