base/monitoring/kube-prometheus-stack/networkpolicies/egress-alertmanager.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-alertmanager
  namespace: monitoring
spec:
  selector: app == 'alertmanager'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 443
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'healthchecks'
        selector:
          app == 'healthchecks'
        ports:
          - 8000
