base/monitoring/kube-prometheus-stack/networkpolicies/egress-grafana.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-grafana
  namespace: monitoring
spec:
  selector: app.kubernetes.io/name == 'grafana'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app.kubernetes.io/instance == 'kube-prometheus-stack-prometheus'
        ports:
          - 9090
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
        ports:
          - 8443  # oidc
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 443
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 6443  # kube api
