base/monitoring/kube-prometheus-stack/networkpolicies/egress-kube-prometheus-stack-operator.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-kube-prometheus-stack-operator
  namespace: monitoring
spec:
  selector: app == 'kube-prometheus-stack-operator'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 6443  # kube api
