base/monitoring/kube-prometheus-stack/networkpolicies/egress-kube-state-metrics.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-kube-state-metrics
  namespace: monitoring
spec:
  selector: app.kubernetes.io/name == 'kube-state-metrics'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 6443  # kube api
