base/monitoring/kube-prometheus-stack/networkpolicies/egress-to-kubeapi.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-to-kubeapi
  namespace: monitoring
spec:
  selector: all()
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 6443
