base/monitoring/kube-prometheus-stack/networkpolicies/grafana.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack
      app.kubernetes.io/name: grafana
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: kube-prometheus-stack-prometheus
            namespace: monitoring
    - toFQDNs:
        - matchName: grafana.com # grafana dashboards
        - matchName: grafana.net # grafana dashboards
        - matchName: raw.githubusercontent.com
        - matchName: storage.googleapis.com # grafana plugin archive
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toServices:
        - k8sServiceSelector:
            selector:
              matchLabels:
                app.kubernetes.io/instance: traefik-traefik
                app.kubernetes.io/name: traefik
            namespace: traefik
      toPorts:
        - ports:
            - port: "8443" # oidc: to access load balancer (https://auth.${BASE_DOMAIN})
              protocol: TCP
