base/monitoring/kube-prometheus-stack/networkpolicies/ingress-grafana.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-grafana
  namespace: monitoring
spec:
  selector: app.kubernetes.io/name == 'grafana'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 3000
    - action: Allow
      protocol: TCP
      source:
        selector: app.kubernetes.io/instance == 'kube-prometheus-stack-prometheus'
      destination:
        ports:
          - 3000
