base/monitoring/kube-prometheus-stack/networkpolicies/ingress-kube-prometheus-stack-operator.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-kube-prometheus-stack-operator
  namespace: monitoring
spec:
  selector: app == 'kube-prometheus-stack-operator'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: app.kubernetes.io/instance == 'kube-prometheus-stack-prometheus'
      destination:
        ports:
          - 10250
