base/monitoring/kube-prometheus-stack/networkpolicies/ingress-nginx-egress-alertmanager.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-alertmanager
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-alertmanager
            app.kubernetes.io/name: alertmanager
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
