base/monitoring/kube-prometheus-stack/networkpolicies/kube-prometheus-stack-operator.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-kube-prometheus-stack-operator
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: kube-prometheus-stack-operator
      release: kube-prometheus-stack
      app.kubernetes.io/instance: kube-prometheus-stack
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus # kubelet
            app.kubernetes.io/name: prometheus
            "k8s:io.kubernetes.pod.namespace": monitoring
        - matchLabels:
            app: kustomize-controller # validationwebhook
            "k8s:io.kubernetes.pod.namespace": flux-system
      toPorts:
        - ports:
            - port: "10250" # kubelet metrics, validationwebhook
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube api
              protocol: TCP
