base/monitoring/kube-prometheus-stack/networkpolicies/nginx-egress-grafana.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-egress-grafana
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
    - toServices:
        - k8sService:
            serviceName: kube-prometheus-stack-grafana
            namespace: monitoring
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
