base/monitoring/kube-prometheus-stack/networkpolicies/prometheus-egress-loki-servicemonitors.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-loki-stack
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
  egress:
    - toServices:
        - k8sServiceSelector:
            selector:
              matchLabels:
                app: loki
            namespace: monitoring
      toPorts:
        - ports:
            - port: "3100"
    - toServices:
        - k8sServiceSelector:
            selector:
              matchLabels:
                app: promtail
            namespace: monitoring
      toPorts:
        - ports:
            - port: "3101"
