base/monitoring/kube-prometheus-stack/networkpolicies/prometheus-egress-loki-stack.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: prometheus-egress-loki-stack
  namespace: monitoring
spec:
  selector: app.kubernetes.io/instance == 'kube-prometheus-stack-prometheus'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'promtail'
        ports:
          - 3101
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'loki'
        ports:
          - 3100
