base/monitoring/kube-prometheus-stack/networkpolicies/prometheus-egress-traefik.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: prometheus-egress-traefik
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'monitoring'
        selector: app.kubernetes.io/instance == 'kube-prometheus-stack-prometheus'
        ports:
          - 9090
